2001-08-19  Ulrich Drepper  <drepper@redhat.com>

	* io/fts.c (fts_safe_changedir): Use __fxstat64 instead of __fstat.

	* sunrpc/svcauth_des.c (_svcauth_des): Avoid using bcopy.
	* sunrpc/xdr_rec.c: Likewise.
	* sunrpc/xdr_mem.c: Likewise.
	* sunrpc/svc_authux.c (_svcauth_unix): Likewise.
	* sunrpc/rpc_cmsg.c: Likewise.
	* sunrpc/getrpcport.c (getrpcport): Likewise.
	* sunrpc/clnt_simp.c (callrpc): Likewise.
	* sunrpc/clnt_gen.c (clnt_create): Likewise.
	* string/envz.c: Likewise.

	* po/ko.po: Update from translation team.

	* argp/argp-help.c: Handle wide oriented stderr stream.

2001-08-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/strtol.c: Little optimizations.  Add some
	__builtin_expect.

	* conform/conformtest.pl: <inttypes.h> test requires <stddef.h>.

	* wcsmbs/wchar.h (wcwdith): Change parameter type to wchar_t.
	* wcsmbs/wcwidth.c (wcwdith): Likewise.
	* wcsmbs/wcwidth.h (internal_wcwdith): Likewise.

	* conform/data/unistd.h-data: Remove _SC_MULTIPLE_PROCESS.

	* conform/data/ucontext.h-data: Fix typos in ucontext_t element tests.

	* time/time.h (struct timespec): Use __time_t for tv_sec element.

	* sysdeps/generic/inttypes.h: Define __wchar_t.  Use it instead of
	wchar_t for function declarations and defintions.

	* misc/sys/select.h: Define __need_time_t before including <time.h>.
	Define suseconds_t if it hasn't happened yet.

	* iconv/gconv.h: Define __need_wchar_t before including <stddef.h>.

	* conform/data/sys/uio.h-data: Allow UIO_MAXIOV to be defined.

	* sysdeps/generic/stdint.h: Don't get definition of wchar_t from
	<stddef.h>.

	* conform/data/stddef.h-data: Remove wint_t.

	* conform/conformtest.pl: Change namespace test to take #undef
	lines into account.

	* conform/data/netinet/in.h-data: Fix typo in allow-header line.

	* conform/data/sys/socket.h-data: Add sockatmark.

2001-08-17  Ulrich Drepper  <drepper@redhat.com>

	* io/fts.c: Update from recent BSD source.

2001-08-17  Roland McGrath  <roland@frob.com>
