@@ -1,3 +1,7 @@
+2001-08-20  Ulrich Drepper  <drepper@redhat.com>
+
+	* include/dirent.h: Include <dirstream.h> first.
+
 2001-08-19  Ulrich Drepper  <drepper@redhat.com>
 
 	* io/fts.c (fts_safe_changedir): Use __fxstat64 instead of __fstat.
